# multi_channel_dataset_creation

./: .gitignore  LICENSE.md  README.md  environment.yml  pyproject.toml  setup.cfg
configs/: create_dataset_example_dataset.ini  template_create_dataset.ini  template_create_labels.ini  template_create_patches.ini  template_create_text_files.ini  template_remove_images_without_labels.ini
docs/: merging_arcGIS_featureclasses.txt
example_dataset/arcgis/example_dataset.gdb/: a00000001.TablesByName.atx  a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.FDO_UUID.atx  a00000006.freelist  a00000006.gdbtable  a00000006.gdbtablx  a0000000a.freelist  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000a.spx  a0000000d.freelist  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000d.spx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000e.spx  timestamps
example_dataset/data/original_data/: README.txt
example_dataset/labels/: codes.txt  example_dataset_buildings.gpkg
example_dataset/shape_files/: footprint.dbf  footprint.shp  footprint.shx
src/befaestelse_dataset_creation/: EmptyImages.txt  copy_files.py  create_all_and_valid_txt.py  create_dataset.py  create_house_images.py  create_label_images.py  create_patches.py  create_train_txt.py  create_txt_files.py  delete_images_with_only_zeroes.py  merge_all_images_probabilities.py  merge_probs_with_numpy.py  move_data_to_separate_folders.py  rename_files.py  split.py  update_arcgis_feature_class.py
src/multi_channel_dataset_creation/: EmptyImages.txt  calculate_shp_file_area.py  copy_files_listed_in_txt_file.py  copy_images_based_on_geojson.py  create_all_and_valid_txt.py  create_coco_format.py  create_dataset.py  create_diff_image.py  create_house_images.py  create_label_images.py  create_patches.py  create_patches_old_version.py  create_train_txt.py  create_txt_file_with_images_that_overlap_with_shapefile.py  create_txt_files.py  crop_to_shapefile.py  crop_to_shapefile_OLD.py  crop_to_shapefile_notworking.py  crop_to_shapefile_working_butwithoutborder.py  delete_images_with_only_zeroes.py  geopackage_to_label_im.py  geopackage_to_label_v2.py  merge_all_images_probabilities.py  merge_probs_with_numpy.py  move_data_to_separate_folders.py  overlap.py  rename_files.py  split.py  update_arcgis_feature_class.py
src/multi_channel_dataset_creation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
