

[metadata]
name = befaestelse_dataset_creation
version = 0.1.0
author = Rasmus Johansson
author_email = rajoh@sdfi.dk
url = https://github.com/SDFIdk/befaestelse_dataset_creation
description = Creating a dataset for training a semantic segmentation model for different kinds of Impervious surfaces. Data is is aerial photos with multiple channels. E.g RGB-nir and lidar-extrabytes-deviation.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = Machine Learning, Semantic Segmentation, Impervious surfaces, Aerial photos
classifiers =
    Topic :: Semantic segmentation, Impervious surfaces
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft Windows
    Programming Language :: Python
homepage = "https://github.com/SDFIdk/befaestelse_dataset_creation"
repository = "https://github.com/SDFIdk/befaestelse_dataset_creation"
documentation = "https://github.com/SDFIdk/befaestelse_dataset_creation"

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.9
packages = find:

setup_requires =
    setuptools

install_requires =
    pillow >= 9.2.0
    psutil
    sys

scripts =
  split.py
  create_label_images.py
  

[options.package_data]
* =  "*.yaml", "*.txt"


[check-manifest]
ignore =
    .ipynb
    .sh

