

[metadata]
name = multi_channel_dataset_creation
version = 0.1.0
author = Rasmus Johansson
author_email = rajoh@sdfi.dk
url = https://github.com/SDFIdk/multi_channel_dataset_creation
description = Creating a dataset based on many different data sources. Data is is aerial photos with multiple channels. E.g RGB-nir and height maps from lidar measurements.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = Machine Learning, Semantic Segmentation, Impervious surfaces, Aerial photos
classifiers =
    Topic :: Semantic segmentation, Impervious surfaces
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft Windows
    Programming Language :: Python
homepage = "https://github.com/SDFIdk/multi_channel_dataset_creation"
repository = "https://github.com/SDFIdk/multi_channel_dataset_creation"
documentation = "https://github.com/SDFIdk/multi_channel_dataset_creation"

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
package_dir=
	=src
packages=find:
[options.packages.find]
where=src


setup_requires =
    setuptools

install_requires =
    pillow >= 9.2.0
    psutil
    GDAL

  
  

[options.package_data]
* =  "*.ini", "*.txt"



